@@ -737,6 +737,14 @@ msg_t
 GPGthread (void *arg)
 {
   Thread *icc_thread = (Thread *)arg;
+#if defined(PINPAD_SUPPORT)
+  extern msg_t pindial_main (void *arg);
+  Thread *pindial_thread;
+  static WORKING_AREA(waPINthread, 128);
+
+  pindial_thread = chThdCreateStatic (waPINthread, sizeof(waPINthread),
+				      NORMALPRIO, pindial_main, NULL);
+#endif
 
   gpg_init ();
 
